--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -8,7 +8,13 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest  # Since you're using Windows
+    runs-on: windows-latest
+
+    services:
+      mongodb:
+        image: mongo
+        ports:
+          - 27017:27017
 
     strategy:
       matrix:
@@ -21,6 +27,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
-    - run: npm start
-      # This will run the test command from your package.json.
-      # Make sure to update the test command in package.json to run actual tests.
+    - run: npm run build --if-present
+    - run: npm test
+      env:
+        MONGODB_URI: mongodb://localhost:27017/yourDatabaseName
